Certificate and OTP verification